--- a/深度学习进阶自然语言处理/forward_net.ipynb
+++ b/深度学习进阶自然语言处理/forward_net.ipynb
@@ -60,7 +60,12 @@
    "id": "bcbfbaad-bcc5-43d2-8862-359e231bb0fc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = np.random.randn(10,2)\n",
+    "model = TwoLayerNet(2,4,3)\n",
+    "\n",
+    "s"
+   ]
   }
  ],
  "metadata": {
