--- a/深度学习进阶自然语言处理/forward_net.ipynb
+++ b/深度学习进阶自然语言处理/forward_net.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "320a3af3-adb3-4961-9861-0e7f9d023ece",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "class sigmoid:\n",
+    "class Sigmoid:\n",
     "    def __init__(self):\n",
     "        self.params = []\n",
     "\n",
@@ -36,7 +36,7 @@
     "        b2=np.random.randn(O)\n",
     "\n",
     "        # 生成层\n",
-    "        sefl.layer=[\n",
+    "        self.layer=[\n",
     "            Affine(W1,W2),\n",
     "            Sigmoid(),\n",
     "            Affine(W2,b2)\n",
@@ -50,22 +50,41 @@
     "        def predict(self,x):\n",
     "            for layer in self.layers:\n",
     "                x = layer.forward(x)\n",
-    "\n",
-    "        return x"
+    "            return x\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bcbfbaad-bcc5-43d2-8862-359e231bb0fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'TwoLayerNet' object has no attribute 'predict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandn(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m      2\u001b[0m model \u001b[38;5;241m=\u001b[39m TwoLayerNet(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m(x)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TwoLayerNet' object has no attribute 'predict'"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.randn(10,2)\n",
+    "model = TwoLayerNet(2,4,3)\n",
+    "model.predict(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcbfbaad-bcc5-43d2-8862-359e231bb0fc",
+   "id": "3adcff67-40b7-4e63-867b-1be653bb1a0e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = np.random.randn(10,2)\n",
-    "model = TwoLayerNet(2,4,3)\n",
-    "\n",
-    "s"
-   ]
+   "source": []
   }
  ],
  "metadata": {
