--- a/深度学习进阶自然语言处理/Untitled1.ipynb
+++ b/深度学习进阶自然语言处理/Untitled1.ipynb
@@ -277,9 +277,9 @@
     "contexts, target = create_contexts_target(corpus, window_size=1)\n",
     "vocab_size = len(word_to_id)\n",
     "print(contexts,target)\n",
-    "# target = convert_one_hot(target, vocab_size)\n",
-    "# contexts = convert_one_hot(contexts, vocab_size)\n",
-    "# print(contexts,vocab_size)\n",
+    "target = convert_one_hot(target, vocab_size)\n",
+    "contexts = convert_one_hot(contexts, vocab_size)\n",
+    "print(contexts,vocab_size)\n",
     "\n",
     "# hidden_size = 5\n",
     "# model = SimpleCBOW(vocab_size, hidden_size)\n",
@@ -327,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
