顺了一部分吧

--- a/深度学习进阶自然语言处理/第三章.ipynb
+++ b/深度学习进阶自然语言处理/第三章.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 1,
    "id": "4eaaa78a-ce13-45b9-98b3-bee0bc02ee72",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 2,
    "id": "e35258ac-e4cd-47f9-84fd-4c2db616a15d",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 3,
    "id": "3b61f288-1f7b-4b5e-803f-500d18fafe3f",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 4,
    "id": "bfe1e34c-18c2-4986-a4e0-c755ab9f26b2",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 5,
    "id": "1f2d2ae5-12fb-4cbc-8429-975eaae58a5d",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 6,
    "id": "95e9fa8a-232e-4e21-b8a0-0c92dd551be7",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 7,
    "id": "d2850e17-75c3-4bef-8248-f93cc2eaaf65",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 8,
    "id": "caad8836-8cf2-4f73-b186-d4727fc7659a",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 9,
    "id": "f8674fb2-64b0-4092-ae13-c57b008156f4",
    "metadata": {},
    "outputs": [
@@ -266,8 +266,102 @@
       " [1 2]\n",
       " [1 1]\n",
       " [2 3]\n",
-      " [1 4]] [1 1 1 2 1 3]\n"
+      " [1 4]] [1 1 1 2 1 3]\n",
+      "[[[1 0 0 0 0]\n",
+      "  [0 1 0 0 0]]\n",
+      "\n",
+      " [[0 1 0 0 0]\n",
+      "  [0 1 0 0 0]]\n",
+      "\n",
+      " [[0 1 0 0 0]\n",
+      "  [0 0 1 0 0]]\n",
+      "\n",
+      " [[0 1 0 0 0]\n",
+      "  [0 1 0 0 0]]\n",
+      "\n",
+      " [[0 0 1 0 0]\n",
+      "  [0 0 0 1 0]]\n",
+      "\n",
+      " [[0 1 0 0 0]\n",
+      "  [0 0 0 0 1]]] 5\n",
+      "5 5\n",
+      "W_in===\n",
+      " [[ 0.02563999 -0.00311403  0.01157996  0.00589074 -0.00337122]\n",
+      " [-0.00244224 -0.00047083  0.0110317  -0.0089099   0.00374297]\n",
+      " [ 0.02793715  0.00494063 -0.01464814  0.00151682  0.00098777]\n",
+      " [-0.02579672 -0.01234641 -0.00766119  0.00301793  0.0002799 ]\n",
+      " [-0.00290042  0.01070336 -0.00263139 -0.00228988 -0.01353024]]\n",
+      "W_out===\n",
+      " [[ 9.3219038e-03  1.3446729e-02  1.2954857e-02 -7.6858094e-03\n",
+      "   7.1504933e-04]\n",
+      " [-1.7743864e-03 -1.6152894e-03 -1.5440615e-02 -4.4043818e-03\n",
+      "   4.4626016e-03]\n",
+      " [-2.2788631e-02 -7.2356304e-03 -1.2632892e-02  7.2004659e-05\n",
+      "  -1.9538665e-02]\n",
+      " [ 1.2394680e-02 -4.4498979e-03  3.8386597e-03  2.6493728e-02\n",
+      "   1.3055851e-02]\n",
+      " [-1.0535759e-02  9.5258476e-03  9.8903449e-03 -1.9914966e-02\n",
+      "  -8.1964293e-03]]\n",
+      "contexts[:, 0]== \n",
+      " [[1 0 0 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 0 1 0 0]\n",
+      " [0 1 0 0 0]]\n",
+      "contexts[:, 1]== \n",
+      " [[0 1 0 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 0 1 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 0 0 1 0]\n",
+      " [0 0 0 0 1]]\n",
+      "h0== \n",
+      " [[ 0.02563999 -0.00311403  0.01157996  0.00589074 -0.00337122]\n",
+      " [-0.00244224 -0.00047083  0.0110317  -0.0089099   0.00374297]\n",
+      " [-0.00244224 -0.00047083  0.0110317  -0.0089099   0.00374297]\n",
+      " [-0.00244224 -0.00047083  0.0110317  -0.0089099   0.00374297]\n",
+      " [ 0.02793715  0.00494063 -0.01464814  0.00151682  0.00098777]\n",
+      " [-0.00244224 -0.00047083  0.0110317  -0.0089099   0.00374297]]\n",
+      "h1== \n",
+      " [[-0.00244224 -0.00047083  0.0110317  -0.0089099   0.00374297]\n",
+      " [-0.00244224 -0.00047083  0.0110317  -0.0089099   0.00374297]\n",
+      " [ 0.02793715  0.00494063 -0.01464814  0.00151682  0.00098777]\n",
+      " [-0.00244224 -0.00047083  0.0110317  -0.0089099   0.00374297]\n",
+      " [-0.02579672 -0.01234641 -0.00766119  0.00301793  0.0002799 ]\n",
+      " [-0.00290042  0.01070336 -0.00263139 -0.00228988 -0.01353024]]\n",
+      "score===\n",
+      " [[-1.67009427e-04  8.55454782e-05  3.11562309e-05 -1.24134213e-04\n",
+      "  -2.41838302e-04]\n",
+      " [-4.23198644e-04 -3.65977679e-05 -1.60914007e-04 -2.88959112e-04\n",
+      "  -3.66397464e-04]\n",
+      " [ 8.53334067e-05  2.19866582e-04  1.62680897e-04 -2.52989520e-04\n",
+      "  -1.32303528e-05]\n",
+      " [-4.23198644e-04 -3.65977679e-05 -1.60914007e-04 -2.88959112e-04\n",
+      "  -3.66397464e-04]\n",
+      " [ 2.92171714e-04  9.70314039e-05  2.26927634e-04  5.47286914e-05\n",
+      "   2.26595245e-04]\n",
+      " [-1.47546669e-04 -9.62727380e-05 -2.36560934e-04 -5.26057693e-05\n",
+      "  -9.41447517e-05]]\n",
+      "target===\n",
+      " [[0 1 0 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 0 1 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 0 0 1 0]]\n",
+      "loss 1.6093288183535606\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.6093288183535606"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -281,9 +375,9 @@
     "contexts = convert_one_hot(contexts, vocab_size)\n",
     "print(contexts,vocab_size)\n",
     "\n",
-    "# hidden_size = 5\n",
-    "# model = SimpleCBOW(vocab_size, hidden_size)\n",
-    "# model.forward(contexts,target)"
+    "hidden_size = 5\n",
+    "model = SimpleCBOW(vocab_size, hidden_size)\n",
+    "model.forward(contexts,target)"
    ]
   },
   {
