--- a/【源代码】深度学习进阶：自然语言处理/ch05/对类RNN代码细节疑问补充/用数值举例这段代码的使用场景，并详细给出每一步中前向传播以及反向传播的过程和影响.md
+++ b/【源代码】深度学习进阶：自然语言处理/ch05/对类RNN代码细节疑问补充/用数值举例这段代码的使用场景，并详细给出每一步中前向传播以及反向传播的过程和影响.md
@@ -15,7 +15,6 @@
 我们逐步通过序列进行前向传播。
 
 **时间步 1：输入 \( x_1 = 0.1 \)，初始隐藏状态 \( h_0 = 0 \)**
-
 - 计算 \( t \):
   \[
   t = h_{\text{prev}} W_h + x W_x + b = 0 \cdot 0.3 + 0.1 \cdot 0.5 + 0.1 = 0.1 \cdot 0.5 + 0.1 = 0.15
@@ -92,3 +91,11 @@
 在这个示例中，我们从输入序列开始，通过前向传播计算出每个时间步的隐藏状态，然后通过反向传播计算出每个参数的梯度。这些梯度将用于更新模型的参数，以减少损失。通过这样的过程，RNN能够逐步学习序列数据的模式和关系。
 
 如果有其他问题或需要更深入的解释，请随时告诉我！
+
+\begin{gathered}
+\frac{\cdots}{a_{1}x_{1}+a_{2}y_{1}+b=y_{2}} \\
+\text{10000000000} \\
+a_{2}x_{2}+a_{2}y_{2}+b=y_{3} \\
+a_{2}x_{3}+a_{2}y_{3}+b=y_{4} \\
+a_{2}x_{4}+a_{2}y_{4}+b=y_{5}
+\end{gathered}
